record patterns in switch, already tested for old-style; java 25+preview